@@ -72,14 +72,16 @@ class TranslationResolveUid:
                 target = self.resolveuid(context, rc, uid)
                 if target is not None:
                     #is_empty = False
-                    if (hasattr(target, 'isCanonical') and
-                        not target.isCanonical()):
-                        cat = getToolByName(context, 'portal_catalog')
-                        rid = cat.getrid('/'.join(target.getPhysicalPath()))
-                        metadata = cat.getMetadataForRID(rid)
-                        if metadata and metadata.get('is_empty', False):
-                            return (tag + target.absolute_url_path() +
-                                    '/not_available_lang')
+
+                    #WIP: this code is commented, is_empty is no longer used
+                    #if (hasattr(target, 'isCanonical') and
+                        #not target.isCanonical()):
+                        #cat = getToolByName(context, 'portal_catalog')
+                        #rid = cat.getrid('/'.join(target.getPhysicalPath()))
+                        #metadata = cat.getMetadataForRID(rid)
+                        #if metadata and metadata.get('is_empty', False):
+                            #return (tag + target.absolute_url_path() +
+                                    #'/not_available_lang')
                     try:
                         url = target.getRemoteUrl()
                     except AttributeError:
